test/libsolidity/syntaxTests/nameAndTypeResolution/046_returning_multi_dimensional_static_arrays.sol
pragma abicoder v1;
contract C {
    function f() public pure returns (uint[][2] memory) {}
}
// ----
// TypeError 4957: (71-87): This type is only supported in ABI coder v2. Use "pragma abicoder v2;" to enable the feature.
